# ArtStudio

./: ArtStudio.code-workspace  LICENSE.md  README.md
backend/: .gitignore  ArtStudio.sln  Directory.Build.props
backend/ArtStudio.Core/: Program.cs  WeatherForecast.cs
backend/ArtStudio.Core/Controllers/: WeatherForecastController.cs
backend/ArtStudio.Core/Properties/: launchSettings.json
backend/ArtStudio.Diagrams/ArtStudio.Core/: include.puml
backend/ArtStudio.Diagrams/ArtStudio.Core/Controllers/: WeatherForecastController.puml
frontend/: .gitignore  index.html  showcase.html
frontend/css/: common.css  index.css  showcase.css
frontend/js/: carousel.js  darkMode.js  getRandomPhotoSvc.js  getrandomphoto.js  glider.js  index.js  showcase.js
frontend/js/carousel/: getRandomPhotoSvc.js
utilities/: .gitignore  pyproject.toml
utilities/src/utilities/: FetchSquarePhotos.py  ResizeImages.py
utilities/tests/: test_utilities.py
