[tool.poetry]
name = "utilities"
version = "0.1.0"
description = ""
authors = ["manojbaishya <28330014+manojbaishya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
